Ajout du bouton Demarrer

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -89,3 +89,10 @@
     flex-direction: column;
   }
 }
+
+a #start-btn{
+  background-color: green;
+  color: #fff;
+  width: 100px;
+  padding: 10px 30px;
+}
