--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -39,7 +39,7 @@
   font-size: 1.5rem;
 }
 
-.grid {
+#grid {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -90,9 +90,14 @@
   }
 }
 
-a #start-btn{
+#startbtn{
   background-color: green;
   color: #fff;
-  width: 100px;
-  padding: 10px 30px;
+  text-align: center;
+  padding: 15px 30px;
+  border-radius: 5px;
+}
+
+.link {
+  text-decoration: none;
 }
