--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -7,16 +7,20 @@
 @layer base {
   html {
     font-family: "Poppins", sans-serif;
-    letter-spacing: -0.40px;
+    letter-spacing: -0.4px;
     padding: 0;
     margin: 0;
   }
-  section{
-    background-image : url('../public/images/Bg.png');
-    width : 100wh;
-    height : 100vh;
-    overflow : hidden;
+  section {
+    background-image: url("../public/images/Bg.png");
+    width: 100wh;
+    height: 100vh;
+    overflow: hidden;
     background-size: contain;
     background-repeat: no-repeat;
+  }
+
+  .gradiant {
+    background: linear-gradient(to right, #e6b800, #b0da4d , #ffffff 50%);
   }
 }
